<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">IF on time</string>
    <string name="app_preferences">Preferences - IF on time</string>
    <string name="action_load_schedules">Load schedules</string>
    <string name="action_preferences">Preferences</string>
    <string name="hello_world">Hello world!</string>
   <string name="sql_create_table_horarios"><![CDATA[
           create table horarios (
               _id integer primary key autoincrement,
               disciplina text not null,
               horario_inicio text not null,
               horario_fim text not null,
               sala text not null,
               professor text not null,
               dia_da_semana integer not null
           );
           ]]>
   </string>
   <string name="sql_insert_default"><![CDATA[
           insert into horarios (disciplina, horario_inicio,
            horario_fim, sala, professor, dia_da_semana) values
            (\'Engenharia de Software\', \'07:40\', \'10:00\', \'BI - Lab. Info\', \'Igor Valente\', 1);
           ]]></string>
   <string name="back_text">Back</string>
   <string name="next_text">Next</string>
   <string name="loading_schedules_text">Loading schedules ...</string>
   <string name="Title">Shedules</string>
   <string name="load_schedules">Load schedules</string>
   <string name="code_text">Code</string>
   <string name="code_not_informed_err">Code not informed.</string>
   <string name="network_not_available_err">Network not available.</string>
   <string name="access_err">Error while accessing server.</string>
   <string name="ok_text">Ok</string>
   <string name="error_occurred">An error occurred</string>
   <string name="general_pref">General</string>
   <string name="pref_host">Server</string>
   <string name="pref_host_summary">IP address of the server</string>
   <string name="pref_host_dialog">Enter the IP address</string>
   <string name="pref_port">Port</string>
   <string name="pref_port_summary">Port of the service</string>
   <string name="pref_port_dialog">Enter the port</string>

</resources>
